--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,17 @@
     left: 60px;
 }
 #kontener #kont_1 p {
-    position: absolute;
+    position: absolute; 
     top: 100px;
     left: 50px;
 }
 
+#main-nav {
+    width: 100%;
+    background: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    border-bottom: 2px solid black;
+}
